# FootballML

./: pyproject.toml
ml/: configuration.json
ml/ml/: data_preprocessing.py  logger.py  main.py  utils.py
ml/tests/: test_data_preprocessing.py  test_main.py  test_utils.py
