[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = ""
authors = ["Adrian Szwajgier <szwajgier.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1.post1"
coloredlogs = "^15.0.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
